<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Story App</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to learn Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Join Dicoding!</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your data first</string>
    <string name="title_login_page">Ready to upgrade your skills?</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="image_login">Image Login</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="story_description">Description</string>
    <string name="image_story">Story Image</string>
    <string name="choose_gallery">Gallery</string>
    <string name="choose_camera">Camera</string>
    <string name="upload">Upload Story</string>
    <string name="fill_description">Fill in the description</string>
    <string name="new_story">New Story</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_invalid_password">Password must be at least 8 characters</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="next">Next</string>
    <string name="yeah">Yeah!</string>
    <string name="success_registration">%1$s. Come on, log in and start learning coding!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="succes_login_as" tools:ignore="StringFormatInvalid">Successfully logged in as %1$s</string>
    <string name="fill_description_and_picture">Please fill in the description and select a picture first</string>
    <string name="title_maps">Maps Story</string>
    <string name="retry">Try again</string>
    <string name="photo_user">User Photo</string>
    <string name="comment">Comment</string>
    <string name="comments_count">Comments (%1$s)</string>
    <string name="there_is_an_error">An error occurred: %1$s</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="post">Post</string>
    <string name="delete">Delete</string>
    <string name="choose_image_first">Please choose an image first</string>
    <string name="back">Back</string>
    <string name="selected_image">Selected Image</string>
    <string name="preview_image">Preview Image</string>
    <string name="upload_failed">Upload failed: %1$s</string>
    <string name="fill_description_first">Please fill in the description first</string>
    <string name="title_detail_story">Detail Story</string>
    <string name="title_setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="load_more">Load more</string>
    <string name="be_the_first_to_comment">Be the first to comment</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="comments">%1$s</string>
    <string name="imageoffset">imageOffset</string>
</resources>