<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_preview"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_image_placeholder"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/btn_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <com.example.storyapp.customview.ButtonView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/navy_500"
                    android:text="@string/choose_gallery"
                    tools:ignore="ButtonStyle" />

                <com.example.storyapp.customview.ButtonView
                    android:id="@+id/btn_camera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/navy_500"
                    android:text="@string/choose_camera"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/story_description"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="top"
                android:hint="@string/fill_description"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                tools:ignore="Autofill" />

            <com.example.storyapp.customview.ButtonView
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/navy_500"
                android:text="@string/upload" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>
</ScrollView>